# Morpher

./: .gitignore  .gitmodules  README.md  pyproject.toml  train.py
config/: morpher_act.yaml  morpher_fixed.yaml
scripts/: param_count.py
src/: datamodule.py  morpher.py  morpher_wrapper.py  utils.py
src/archive/: morpher_slow.py
src/data/: eca.py
src/models/: morpher.py
src/models/modules/: __init__.py  casted_embedding.py  rotary_embedding.py  sparse_embedding.py
src/modules/: casted_linear.py  dropout.py  rms_norm.py  swiglu.py
src/tasks/: base.py  forward.py
tests/: test_global_slot.py  test_morpher.py  test_morpher_integration.py  test_morpher_schedule_and_grads.py  test_morpher_wrapper.py  test_rope.py  test_rope_and_attention.py  test_tables_routing_projector.py
