[project]
name = "morpher"
version = "0.1.0"
description = "Morpher computation block"
authors = [
    {name = "Abhi abhi@abhitopia.me"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=1.26.0,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "coolname (>=2.2.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "argdantic (>=1.3.3,<2.0.0)",
    "wandb (>=0.23.1,<0.24.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "huggingface-hub (>=1.2.3,<2.0.0)"
]

[project.optional-dependencies]
cuda = [
    "adam-atan2 (>=0.0.3,<0.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
